Add some texts to the landing page

--- a/landing.html
+++ b/landing.html
@@ -8,5 +8,21 @@
 
     <body>
         <h1>NARUTO UZUMAKI</h1>
+
+        <div class="l-column">
+            <h2>Who is Naruto Uzumaki</h2>
+            <p>Naruto is the 9 tails jinchuriki. The 9 tailed beast was sealed inside him by his father Minato Namikaze.</p>
+            <p>His mother, Kushina Uzumaki was the previous ( tails jinchuriki.</p>
+        </div>
+
+        <div class="r-column">
+            <h2>Naruto's projects</h2>
+            <p>Some projects Naruto has completed include:</p>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+            </ul>
+
+        </div>
     </body>
 </html>
