--- a/landing.html
+++ b/landing.html
@@ -12,7 +12,7 @@
         <div class="l-column">
             <h2>Who is Naruto Uzumaki</h2>
             <p>Naruto is the 9 tails jinchuriki. The 9 tailed beast was sealed inside him by his father Minato Namikaze.</p>
-            <p>His mother, Kushina Uzumaki was the previous ( tails jinchuriki.</p>
+            <p>His mother, Kushina Uzumaki was the previous 9 tails jinchuriki.</p>
         </div>
 
         <div class="r-column">
