--- a/landing.html
+++ b/landing.html
@@ -19,8 +19,8 @@
             <h2>Naruto's projects</h2>
             <p>Some projects Naruto has completed include:</p>
             <ul>
-                <li>1</li>
-                <li>2</li>
+                <li><a href="https://rajiv-kinyanjui.github.io/First-Webpage/">First-Webpage</a> - Written using HTML and CSS.</li>
+                <li><a href="https://github.com/Rajiv-Kinyanjui/Media-Query">Media Query</a> - Written using HTML and CSS.</li>
             </ul>
 
         </div>
