--- a/landing.html
+++ b/landing.html
@@ -9,19 +9,30 @@
     <body>
         <h1>NARUTO UZUMAKI</h1>
 
-        <div class="l-column">
+        <div class="info">
+
             <h2>Who is Naruto Uzumaki</h2>
+            <img src="images/Naruto1.jpeg" alt="Uzumaki">
             <p>Naruto is the 9 tails jinchuriki. The 9 tailed beast was sealed inside him by his father Minato Namikaze.</p>
             <p>His mother, Kushina Uzumaki was the previous 9 tails jinchuriki.</p>
         </div>
 
-        <div class="r-column">
+        <div class="projects">
+
             <h2>Naruto's projects</h2>
             <p>Some projects Naruto has completed include:</p>
             <ul>
                 <li><a href="https://rajiv-kinyanjui.github.io/First-Webpage/">First-Webpage</a> - Written using HTML and CSS.</li>
                 <li><a href="https://github.com/Rajiv-Kinyanjui/Media-Query">Media Query</a> - Written using HTML and CSS.</li>
             </ul>
+        </div>
+
+        <div class="aboutme">
+            <h2>ABOUT ME:</h2>
+            <img src="images/Naruto2.jpeg" alt="Naruto">
+
+            <h4 class="education">Education</h4>
+            <p>I attended the Konoha's academy for Ninja since I was 3 years old. It was always my dream to become the strongest shinobi so that the whole village would recognize me and respect me.</p>
 
         </div>
     </body>
