ADd the job experience showing my skills and capabilities.

--- a/landing.html
+++ b/landing.html
@@ -34,6 +34,17 @@
             <h4 class="education">Education</h4>
             <p>I attended the Konoha's academy for Ninja since I was 3 years old. It was always my dream to become the strongest shinobi so that the whole village would recognize me and respect me.</p>
 
+            <h4 class="job">Job Experience</h4>
+            <p>I have been a shinobi for almost 4 years. I enjoy being a shinobi. I am one of the strongest shinobi in the land. I have multiple jutsu in my command.</p>
+
+            <p>They include:</p>
+            <ul>
+                <li>Shadow clone Jutsu.</li>
+                <li>The rasengan.</li>
+                <li>Rasen-shuriken.</li>
+            </ul>
+            <p>I have also managed to control the 9-tails chakra. I have also befriended the 9 tails. His name is kurama and together we make a good team.</p>
+
         </div>
     </body>
 </html>
