Add the video tag

--- a/landing.html
+++ b/landing.html
@@ -45,6 +45,8 @@
             </ul>
             <p>I have also managed to control the 9-tails chakra. I have also befriended the 9 tails. His name is kurama and together we make a good team.</p>
 
+            <video src=""></video>
+
         </div>
     </body>
 </html>
