Remove the video link and place an anchor tag

--- a/landing.html
+++ b/landing.html
@@ -43,10 +43,9 @@
                 <li>The rasengan.</li>
                 <li>Rasen-shuriken.</li>
             </ul>
-            <p>I have also managed to control the 9-tails chakra. I have also befriended the 9 tails. His name is kurama and together we make a good team.</p>
-
-            <video src=""></video>
-
+            <p>I have also managed to control the 9-tails chakra. I have also befriended the 9 tails. His name is kurama and together we make a good <a href="https://www.youtube.com/watch?v=CmsXraEmC90&t=6s">team.</a></p>
+            
+            
         </div>
     </body>
 </html>
