Add the paragrapgh explaining why programming

--- a/landing.html
+++ b/landing.html
@@ -45,7 +45,7 @@
             </ul>
             <p>I have also managed to control the 9-tails chakra. I have also befriended the 9 tails. His name is kurama and together we make a good <a href="https://www.youtube.com/watch?v=CmsXraEmC90&t=6s">team.</a></p>
             
-            
+            <p class="programming">I decided to do programming because I want to be able to help my village konoha in the most efficient way possible. Such that incase the village is attacked for example by the Akatski. There would be software in place that would allow anyone from any corner of the village hidden in the leaves to contact a shinobi as soon as possible.</p>
         </div>
     </body>
 </html>
