Add the border line

--- a/landing.html
+++ b/landing.html
@@ -13,8 +13,8 @@
 
             <h2>Who is Naruto Uzumaki</h2>
             <img src="images/Naruto1.jpeg" alt="Uzumaki">
-            <p>Naruto is the 9 tails jinchuriki. The 9 tailed beast was sealed inside him by his father Minato Namikaze.</p>
-            <p>His mother, Kushina Uzumaki was the previous 9 tails jinchuriki.</p>
+            <p>Naruto is the 9 tails jinchuriki. The 9 tailed beast was sealed inside him by his father Minato Namikaze.
+            His mother, Kushina Uzumaki was the previous 9 tails jinchuriki.</p>
         </div>
 
         <div class="projects">
